# nqmp-bench

./: .env.example  .gitignore  README.md  leaderboard.csv  pyproject.toml
results/echo-unknown-pairs100-20250910_082714/: correct_predictions_echo-unknown-pairs100-20250910_082714.jsonl  incorrect_predictions_echo-unknown-pairs100-20250910_082714.jsonl  metrics_echo-unknown-pairs100-20250910_082714.json  predictions.jsonl  report_echo-unknown-pairs100-20250910_082714.html  report_echo-unknown-pairs100-20250910_082714.md  run_info.json
results/openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_083901/: correct_predictions_openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_084052.jsonl  incorrect_predictions_openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_084052.jsonl  metrics_openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_084052.json  predictions.jsonl  report_openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_084052.html  report_openrouter-google-gemini-2.5-flash-lite-pairs100-20250910_084052.md  run_info.json
results/openrouter-google-gemini-2.5-flash-pairs100-20250910_084409/: correct_predictions_openrouter-google-gemini-2.5-flash-pairs100-20250910_084619.jsonl  incorrect_predictions_openrouter-google-gemini-2.5-flash-pairs100-20250910_084619.jsonl  metrics_openrouter-google-gemini-2.5-flash-pairs100-20250910_084619.json  predictions.jsonl  report_openrouter-google-gemini-2.5-flash-pairs100-20250910_084619.html  run_info.json  (+1 more)
scripts/: run_benchmark.py
src/nqmp_bench/: cli.py  (+8 more)
tests/: test_generator.py  test_grader.py
(+15 files in other folders)
